# uap-spec

./: README.md  RFC-0001-UAP-CORE.md
examples/: invoke-yijing-request.json  openwen-yijing-agent-manifest.json
openwen-demo/agents/: __init__.py  coordinator_agent.py  doctrine_agent.py  retrieval_agent.py  review_agent.py  writing_agent.py
openwen-demo/core/: __init__.py  config.py  llm.py
schema/: agent-did-document.json  capability-manifest.json  message-envelope.json
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: openwen_yijing.py
sdk/python/tests/: test_core.py
sdk/python/uap/: __init__.py  capability.py  client.py  decorators.py  envelope.py  identity.py  intent.py  server.py
