[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uap-python"
version = "0.1.0"
description = "Universal Agent Protocol (UAP) Python SDK — 万Agent互联协议"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["agent", "protocol", "AI", "LLM", "UAP", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# 核心依赖极简，只用标准库
dependencies = []

[project.optional-dependencies]
# HTTP 客户端
client = ["httpx>=0.27.0"]
# FastAPI 服务端
server = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0"]
# 完整安装
full = [
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]
# 开发工具
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/cml3366/uap-spec"
Repository = "https://github.com/cml3366/uap-python"
"Bug Tracker" = "https://github.com/cml3366/uap-spec/issues"
Documentation = "https://github.com/cml3366/uap-spec/blob/main/RFC-0001-UAP-CORE.md"

[tool.hatch.build.targets.wheel]
packages = ["uap"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
